tests/baselines/reference/enumWithoutInitializerAfterComputedMember.errors.txt
tests/cases/compiler/enumWithoutInitializerAfterComputedMember.ts(7,9): error TS2482: Enum member 'd' must be declared after 'f'.
tests/cases/compiler/enumWithoutInitializerAfterComputedMember.ts(9,9): error TS2304: Cannot find name 'bad'.


==== tests/cases/compiler/enumWithoutInitializerAfterComputedMember.ts (2 errors) ====
    const z = 6;
    
    enum E {
        a,
        b = a,
        c,
        d = f,
            ~
!!! error TS2482: Enum member 'd' must be declared after 'f'.
        f,
        g = bad,
            ~~~
!!! error TS2304: Cannot find name 'bad'.
        h = E.b,
        i = E["b"],
        j = z,
        k = 3,
        l,
        m = (Math.random() > 0.5 ? 1 : 2),
    }